apps/monitoring-routes/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: main
      namespace: traefik
  hostnames:
    - grafana.k8s.hyperion.internal
    - grafana.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kps-grafana
          port: 80
